feat: implement Microsoft Clarity

--- a/lib/skate_web/templates/layout/app.html.eex
+++ b/lib/skate_web/templates/layout/app.html.eex
@@ -23,6 +23,9 @@
     <%= if record_fullstory?() do %>
       <%= render "_fullstory.html", assigns %>
     <% end %>
+    <%= if record_clarity?() do %>
+      <%= render "_clarity.html", assigns %>
+    <% end %>
     <%= if record_appcues?() do %>
       <%= render "_appcues.html", assigns %>
     <% end %>
