--- a/lib/skate_web/templates/layout/_clarity.html.eex
+++ b/lib/skate_web/templates/layout/_clarity.html.eex
@@ -4,4 +4,7 @@
      t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
      y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
  })(window, document, "clarity", "script", "bn49rgzkyt");
+ <%= if @username do %>
+ window.username = "<%= @username %>";
+ <% end %>
 </script>
