feat: top bar visible
Creates space for top bar, shows content of rest of page, entry point for hamburger, functional notifications.

--- a/assets/css/_nav.scss
+++ b/assets/css/_nav.scss
@@ -1,4 +1,4 @@
-.m-nav--wide {
+.m-nav--wide, .m-nav--narrow {
   display: grid;
   gap: 0;
   grid-template-columns: max-content minmax(0, 1fr);
@@ -6,6 +6,11 @@
   grid-template-areas:
     "top top"
     "left content";
+  width: 100%;
+  height: 100%;
+}
+
+.m-nav--narrow {
   width: 100%;
   height: 100%;
 }
