--- a/assets/css/nav/_top_nav.scss
+++ b/assets/css/nav/_top_nav.scss
@@ -28,7 +28,7 @@
   }
 }
 
-.m-top-nav__right-items {
+.m-top-nav__right-items, .m-top-nav__left-items {
   display: flex;
 
   :not(:last-child) {
@@ -36,7 +36,7 @@
   }
 }
 
-.m-top-nav__right-item {
+.m-top-nav__right-item, .m-top-nav__left-item {
   @include button-icon(1.5rem);
   color: $color-gray-600;
 
