--- a/assets/css/nav/_top_nav_mobile.scss
+++ b/assets/css/nav/_top_nav_mobile.scss
@@ -12,3 +12,64 @@
 .m-top-nav__right-items, .m-top-nav__left-items {
   max-width: 20px;
 }
+
+.m-top-nav-mobile__close {
+  width: 1rem;
+  height: 1rem;
+  position: absolute;
+  top: 0;
+  right: 1.5rem;
+  svg {
+    fill: $color-gray-600;
+  }
+}
+
+.m-top-nav-mobile__menu {
+  width: 80%;
+  min-width: 292px;
+  max-width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  z-index: 99;
+  padding: 0px;
+  background-color: $color-gray-50;
+}
+
+.m-top-nav-mobile__menu-header {
+  width: 100%;
+  height: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  margin-bottom: 0.5rem;
+  background-color: $color-gray-100;
+}
+
+.m-top-nav-mobile__menu-link {
+  text-decoration: none;
+  width: 100%;
+}
+
+.m-top-nav-mobile__menu-button, .m-top-nav-mobile__menu-link {
+  color: $color-gray-600;
+  width: 100%;
+  height: 3rem;
+  line-height: 3rem;
+  display: table-cell;
+  text-align: left;
+  vertical-align: middle;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.m-top-nav-mobile__menu-icon {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  svg {
+    fill: $color-gray-600;
+    width: 1.5rem;
+    height: 1.5rem;
+  }  
+}
