open and close menu

--- a/assets/css/nav/_top_nav_mobile.scss
+++ b/assets/css/nav/_top_nav_mobile.scss
@@ -36,6 +36,10 @@
   background-color: $color-gray-50;
 }
 
+.m-top-nav-mobile__menu--collapsed {
+  display: none;
+}
+
 .m-top-nav-mobile__menu-header {
   width: 100%;
   height: 2rem;
