background blur when mobile menu is open

--- a/assets/css/_ui_kit.scss
+++ b/assets/css/_ui_kit.scss
@@ -376,3 +376,14 @@ $box-shadow-secondary: 0 2px 4px 0 rgba(77, 182, 172, 0.2);
 $submenu-box-shadow: 0 2px 4px 0 rgba(126, 126, 126, 0.5);
 
 $font-family-route-pill: "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+// blur state 
+@mixin blur {
+  filter: blur(5px);
+}
+
+@media screen and (max-width: $mobile-max-width) {
+  .blurred-mobile {
+    @include blur;
+  }
+}
