--- a/assets/css/_ladder_page.scss
+++ b/assets/css/_ladder_page.scss
@@ -36,7 +36,7 @@ $color-route-tabs-separator: #9fa2ac;
 @media screen and (max-width: $mobile-max-width) {
   .m-ladder-page--picker-container-visible {
     .m-ladder-page__tab-bar-and-ladders {
-      filter: blur(5px);
+      @include blur;
     }
   }
 }
