--- a/assets/css/_nav.scss
+++ b/assets/css/_nav.scss
@@ -1,5 +1,4 @@
-.m-nav--wide,
-.m-nav--narrow {
+.m-nav--wide {
   display: grid;
   gap: 0;
   grid-template-columns: max-content minmax(0, 1fr);
@@ -12,6 +11,13 @@
 }
 
 .m-nav--narrow {
+  display: grid;
+  gap: 0;
+  grid-template-columns: max-content minmax(0, 1fr);
+  grid-template-rows: max-content minmax(0, 1fr);
+  grid-template-areas:
+    "top top"
+    "left content";
   width: 100%;
   height: 100%;
 }
