--- a/assets/css/nav/_top_nav_mobile.scss
+++ b/assets/css/nav/_top_nav_mobile.scss
@@ -36,6 +36,48 @@
   fill: $color-eggplant-500;
 }
 
+.m-top-nav-mobile__notifications-icon {
+  svg {
+    path {
+      fill: $color-gray-600;
+      stroke: none;
+    }
+
+    circle {
+      fill: $color-strawberry-500;
+      stroke: $color-strawberry-500;
+    }
+  }
+
+  &:hover {
+    svg {
+      path {
+        fill: $color-gray-500;
+        stroke: none;
+      }
+
+      circle {
+        fill: $color-strawberry-400;
+        stroke: $color-strawberry-400;
+      }
+    }
+  }
+
+  &.m-top-nav-mobile__notifications-icon--active {
+    svg {
+      path {
+        fill: $color-eggplant-800;
+        stroke: none;
+      }
+
+      circle {
+        fill: $color-strawberry-500;
+        stroke: $color-strawberry-500;
+      }
+    }
+  }
+}
+
 .m-top-nav-mobile__menu--open {
   width: 18.125rem;
   max-width: 100%;
@@ -79,9 +121,28 @@
   color: $color-gray-900;
 }
 
-.m-top-nav-mobile__menu-link {
+.m-top-nav-mobile__menu-link,
+.m-top-nav-mobile__menu-button {
   text-decoration: none;
+  display: flex;
+  align-items: center;
+  padding: 0.5rem 0.625rem;
+  box-sizing: border-box;
   width: 100%;
+  height: 2.25rem;
+  border-radius: 0.375rem;
+
+  &:hover {
+    background-color: $color-gray-100;
+    color: $color-gray-700;
+    font-weight: 500;
+  }
+
+  &.m-top-nav-mobile__menu-link--active {
+    background-color: $color-eggplant-100;
+    font-weight: 500;
+    color: $color-eggplant-800;
+  }
 }
 
 .m-top-nav-mobile__menu-button,
