--- a/assets/css/_search_page.scss
+++ b/assets/css/_search_page.scss
@@ -44,6 +44,7 @@
 @media screen and (max-width: $mobile-max-width) {
   .m-search-page {
     flex-direction: column;
+    overflow: auto; /* Unset overflow: visible to prevent showing map below */
   }
 
   .m-search-page--show-list {
