small CSS fixes

--- a/assets/css/nav/_top_nav_mobile.scss
+++ b/assets/css/nav/_top_nav_mobile.scss
@@ -6,6 +6,7 @@
   background-color: $color-gray-50;
   border-bottom: 1px solid $color-gray-300;
   z-index: 108;
+  align-items: center;
 }
 
 .m-top-nav-mobile__overlay {
