--- a/assets/css/nav/_top_nav_mobile.scss
+++ b/assets/css/nav/_top_nav_mobile.scss
@@ -2,14 +2,6 @@
 .m-top-nav-mobile__left-items {
   display: flex;
 
-  :not(:last-child) {
-    padding-right: 1.5rem;
-  }
-}
-
-.m-top-nav-mobile__right-items,
-.m-top-nav-mobile__left-items {
-  @include button-icon(1.5rem);
   color: $color-gray-600;
 
   & span svg {
@@ -25,10 +17,23 @@
   }
 }
 
-.m-top-nav-mobile__left-items .m-top-nav-mobile__icon {
-  /* Center the hamburger */
-  display: block;
-  height: 1rem;
+.m-top-nav-mobile__right-items {
+  :not(:last-child) {
+    padding-right: 1.5rem;
+  }
+
+  @include button-icon(1.5rem);
+}
+
+.m-top-nav-mobile__left-items {
+  @include button-icon(1rem);
+
+  .m-top-nav-mobile__icon {
+    /* Center the hamburger */
+    display: block;
+    height: 1rem;
+  }
+
 }
 
 .m-top-nav-mobile__content {
@@ -50,8 +55,6 @@
 }
 .m-top-nav-mobile__overlay--open {
   display: block;
-  width: 100%;
-  height: 100%;
   z-index: 109;
   background: rgba(88, 88, 88, 0.23);
 }
@@ -130,7 +133,7 @@
 .m-top-nav-mobile__menu-header {
   max-height: 3rem;
   margin-bottom: 0.5rem;
-  padding: 0.75rem 1.5rem 0.5rem 1.5rem;
+  padding: 0.625rem 1.5rem 0.625rem 1.5rem;
   background-color: $color-gray-100;
   display: flex;
   justify-content: space-between;
@@ -142,6 +145,11 @@
   svg {
     fill: $color-gray-600;
   }
+}
+
+.m-top-nav-mobile__close-icon {
+  display: block;
+  height: 1rem;
 }
 
 .m-top-nav-mobile__logo-icon {
