--- a/assets/css/_nav.scss
+++ b/assets/css/_nav.scss
@@ -10,6 +10,18 @@
   height: 100%;
 }
 
+.m-nav--narrow {
+  display: grid;
+  gap: 0;
+  grid-template-columns: max-content minmax(0, 1fr);
+  grid-template-rows: max-content minmax(0, 1fr);
+  grid-template-areas:
+    "top top"
+    "left content";
+  width: 100%;
+  height: 100%;
+}
+
 .m-nav__nav-bar {
   z-index: 1100;
 }
