--- a/assets/css/nav/_top_nav_mobile.scss
+++ b/assets/css/nav/_top_nav_mobile.scss
@@ -35,7 +35,7 @@
   }
 }
 
-.m-top-nav-mobile__content {
+.m-top-nav-mobile__inner {
   display: flex;
   box-sizing: border-box;
   padding: 0.625rem 1.5rem 0.625rem 1.5rem;
