--- a/assets/css/_nav.scss
+++ b/assets/css/_nav.scss
@@ -17,7 +17,8 @@
   grid-template-rows: max-content minmax(0, 1fr);
   grid-template-areas:
     "top top"
-    "left content";
+    "left content"
+    "bottom bottom";
   width: 100%;
   height: 100%;
 }
@@ -32,6 +33,10 @@
 
 .m-nav__nav-bar--top {
   grid-area: top;
+}
+
+.m-nav__nav-bar--bottom {
+  grid-area: bottom;
 }
 
 .m-nav__app-content {
