--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -33,6 +33,7 @@ $shuttle-picker-width: 12.6rem;
 @import "nav/left_nav";
 @import "nav/top_nav";
 @import "nav/top_nav_mobile";
+@import "nav/bottom_nav_mobile";
 @import "notifications";
 @import "notification_bell_icon";
 @import "notification_content";
