--- a/assets/css/nav/_bottom_nav_mobile.scss
+++ b/assets/css/nav/_bottom_nav_mobile.scss
@@ -1,8 +1,68 @@
 .m-bottom-nav-mobile {
-	display: flex;
   	background-color: $color-gray-50;
   	border-top: 1px solid $color-gray-300;
+	padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+}
+
+.m-bottom-nav-mobile__links {
+	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 0.625rem 1.5rem 0.625rem 1.5rem;
+	margin: 0;
+}
+
+.m-bottom-nav-mobile__link, .m-bottom-nav-mobile__button {
+  @include button-icon(1.25rem);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.25rem 0.25rem;
+  box-sizing: border-box;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 0.375rem;
+
+  font-weight: 400;
+  @include font-body;
+  color: $color-gray-600;
+  text-decoration: none;
+
+  &:hover {
+    background-color: $color-gray-100;
+    color: $color-gray-700;
+    font-weight: 500;
+  }
+
+  &.m-bottom-nav-mobile__link--active {
+    background-color: $color-eggplant-100;
+
+    font-weight: 500;
+    color: $color-eggplant-800;
+  }
+}
+
+.m-bottom-nav-mobile__icon {
+  &.m-left-nav__icon--late-view svg {
+    fill: $color-gray-50;
+    stroke: $color-gray-600;
+
+    circle {
+      fill: $color-gray-600;
+    }
+
+    .clock {
+      stroke-width: 2;
+    }
+
+    .bang {
+      fill: $color-gray-50;
+      stroke: none;
+    }
+  }
+
+  &.m-bottom-nav-mobile__icon--swings-view svg {
+    transform: scaleX(-1);
+    fill: $color-gray-50;
+    stroke: $color-gray-600;
+  }
 }
