--- a/assets/css/properties_panel/_tab_panels.scss
+++ b/assets/css/properties_panel/_tab_panels.scss
@@ -12,11 +12,18 @@
   border-left: 1px solid $color-bg-base;
   border-radius: 0;
   color: $color-font-grey;
-  display: inline-block;
   flex: 1 0 auto;
   list-style: none;
-  padding: 0.75rem;
-  text-transform: uppercase;
+  padding: 0;
+
+  button {
+    width: 100%;
+    height: 100%;
+    padding: 0.75rem;
+    text-transform: uppercase;
+    text-align: start;
+    display: inline-block;
+  }
 
   &:first-of-type {
     border-width: 0;
