--- a/assets/css/nav/_bottom_nav_mobile.scss
+++ b/assets/css/nav/_bottom_nav_mobile.scss
@@ -13,14 +13,14 @@
 
 .m-bottom-nav-mobile__link,
 .m-bottom-nav-mobile__button {
-  @include button-icon(1.25rem);
+  @include button-icon(1.5rem);
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0.25rem 0.25rem;
   box-sizing: border-box;
-  width: 3rem;
-  height: 3rem;
+  width: 2rem;
+  height: 2rem;
+  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
   border-radius: 0.375rem;
 
   font-weight: 400;
