--- a/assets/css/_nav.scss
+++ b/assets/css/_nav.scss
@@ -13,12 +13,12 @@
 .m-nav--narrow {
   display: grid;
   gap: 0;
-  grid-template-columns: max-content minmax(0, 1fr);
-  grid-template-rows: max-content minmax(0, 1fr);
+  grid-template-columns: minmax(0, 1fr);
+  grid-template-rows: max-content minmax(0, 2fr);
   grid-template-areas:
-    "top top"
-    "left content"
-    "bottom bottom";
+    "top"
+    "content"
+    "bottom";
   width: 100%;
   height: 100%;
 }
