--- a/assets/css/nav/_top_nav_mobile.scss
+++ b/assets/css/nav/_top_nav_mobile.scss
@@ -56,6 +56,8 @@
   display: block;
   z-index: 109;
   background: rgba(88, 88, 88, 0.23);
+  height: 100%;
+  width: 100%;
 }
 
 .m-top-nav-mobile__icon svg,
@@ -123,6 +125,7 @@
   z-index: 110;
   padding: 0px;
   background-color: $color-gray-50;
+  border-right: 1px solid $color-gray-300;
 }
 
 .m-top-nav-mobile__menu--closed {
