--- a/lib/skate_web/templates/layout/app.html.eex
+++ b/lib/skate_web/templates/layout/app.html.eex
@@ -23,6 +23,10 @@
       <meta name="username" content="<%= @username %>">
     <% end %>
 
+    <%= if @user_uuid do %>
+      <meta name="user-uuid" content="<%= @user_uuid %>">
+    <% end %>
+
     <title>Skate</title>
 
     <link rel="apple-touch-icon" href="<%= static_href.(@conn, "/images/mbta-logo-t-180.png") %>" type="image/png">
