feat: close Drift widget on chat close

--- a/lib/skate_web/templates/layout/_drift.html.eex
+++ b/lib/skate_web/templates/layout/_drift.html.eex
@@ -26,5 +26,10 @@ drift.load('xhxx5rayxher');
 
 drift.on('ready', function(api) {
   api.widget.hide();
+
+  // don't leave the widget open and taking up screen space
+  drift.on('chatClose', function(e) {
+    api.widget.hide()
+  })
 })
 </script>
